<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.github</groupId>
    <artifactId>db2rest-parent</artifactId>
    <version>1.1.4</version>
    <packaging>pom</packaging>
    <name>DB2Rest parent</name>
    <description>An Open Source instant REST Data API for databases. This is the DB2Rest parent Maven project.</description>

    <!-- PROJECT ORGANIZATION METADATA -->

    <organization>
        <name>DB2Rest</name>
        <url>https://db2rest.com</url>
    </organization>
    <url>https://db2rest.com</url>
    <inceptionYear>2023</inceptionYear>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git://github.com//kdhrubo/db2rest.git</connection>
        <developerConnection>scm:git:https://github.com/kdhrubo/db2rest</developerConnection>
        <url>https://github.com/kdhrubo/db2rest</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/kdhrubo/db2rest/issues</url>
    </issueManagement>

    <!-- BEGIN MODULE LAYOUT -->

    <properties>
        <db2rest.version>0.3.2</db2rest.version>
        <java.version>21</java.version>
        <spring-restdocs.version>3.0.1</spring-restdocs.version>
    </properties>

    <modules>
        <module>api-rest</module>
        <module>auth</module>
        <module>mongo-support</module>
        <module>rest-common</module>
        <module>pg-dialect</module>
        <module>mssql-dialect</module>
        <module>mysql-dialect</module>
        <module>mariadb-dialect</module>
        <module>oracle-dialect</module>
        <module>oracle9i-dialect</module>
        <module>rdbms-common</module>
        <module>db2rest-common</module>
        <module>rdbms-support</module>
        <module>rdbms-spring-boot-starter</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/kdhrubo/db2rest</url>
        </repository>
    </distributionManagement>

    <dependencies>

        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-csv</artifactId>
            <version>2.16.1</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>


        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
        </dependency>

        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>


        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.17.0</version>
        </dependency>


        <dependency>
            <groupId>io.github.nstdio</groupId>
            <artifactId>rsql-parser</artifactId>
            <version>2.3.2</version>
        </dependency>

    </dependencies>

</project>
